// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/user_settings/notifications/EmailNotificationSetting should match snapshot, active section != email and SendEmailNotifications !== true 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      defaultMessage="Email notifications are not enabled"
      id="user.settings.notifications.email.disabled"
      values={Object {}}
    />
  }
  focused={false}
  section="email"
  title="Email notifications"
  updateSection={[Function]}
/>
`;

exports[`components/user_settings/notifications/EmailNotificationSetting should match snapshot, active section != email and SendEmailNotifications = true 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      defaultMessage="Never"
      id="user.settings.notifications.email.never"
      values={Object {}}
    />
  }
  focused={false}
  section="email"
  title="Email notifications"
  updateSection={[Function]}
/>
`;

exports[`components/user_settings/notifications/EmailNotificationSetting should match snapshot, active section != email, SendEmailNotifications = true and enableEmail = true 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      defaultMessage="Every {count, plural, one {minute} other {{count, number} minutes}}"
      id="user.settings.notifications.email.everyXMinutes"
      values={
        Object {
          "count": 0,
        }
      }
    />
  }
  focused={false}
  section="email"
  title="Email notifications"
  updateSection={[Function]}
/>
`;

exports[`components/user_settings/notifications/EmailNotificationSetting should match snapshot, not send email notifications 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div
        className="padding-top"
      >
        <FormattedMessage
          defaultMessage="Email notifications have not been enabled by your System Administrator."
          id="user.settings.notifications.email.disabled_long"
          values={Object {}}
        />
      </div>,
    ]
  }
  saving={false}
  section="email"
  title="Email notifications"
  updateSection={[Function]}
/>
`;

exports[`components/user_settings/notifications/EmailNotificationSetting should match snapshot, on serverError 1`] = `
<SettingItemMax
  containerStyle=""
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <label>
          <FormattedMessage
            defaultMessage="Send email notifications"
            id="user.settings.notifications.email.send"
            values={Object {}}
          />
        </label>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              data-email-interval={30}
              data-enable-email="true"
              id="emailNotificationImmediately"
              name="emailNotifications"
              onChange={[Function]}
              type="radio"
            />
            <FormattedMessage
              defaultMessage="Immediately"
              id="user.settings.notifications.email.immediately"
              values={Object {}}
            />
          </label>
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={true}
              data-email-interval={0}
              data-enable-email="false"
              id="emailNotificationNever"
              name="emailNotifications"
              onChange={[Function]}
              type="radio"
            />
            <FormattedMessage
              defaultMessage="Never"
              id="user.settings.notifications.email.never"
              values={Object {}}
            />
          </label>
        </div>
        <br />
        <div>
          <FormattedMessage
            defaultMessage="Email notifications are sent for mentions and direct messages when you are offline or away from {siteName} for more than 5 minutes."
            id="user.settings.notifications.emailInfo"
            values={
              Object {
                "siteName": "Mattermost",
              }
            }
          />
           
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  server_error="serverError"
  submit={[Function]}
  title="Email notifications"
  updateSection={[Function]}
/>
`;
